[gd_scene load_steps=9 format=3 uid="uid://ced13t6gundxr"]

[ext_resource type="Script" path="res://scripts/tome.gd" id="1_kdg2i"]
[ext_resource type="Texture2D" uid="uid://d377af70cyj4y" path="res://assets/sprites/level_objects/spells/tome.png" id="1_swse0"]
[ext_resource type="Shader" path="res://shaders/highlight.gdshader" id="2_sdvc5"]
[ext_resource type="FontFile" uid="uid://s0bpnvolv2i8" path="res://assets/fonts/PixelOperator8.ttf" id="4_7dujs"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_xkvu8"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1

[sub_resource type="ShaderMaterial" id="ShaderMaterial_prgk6"]
resource_local_to_scene = true
shader = ExtResource("2_sdvc5")
shader_parameter/outline_color = Color(1, 1, 1, 1)
shader_parameter/enabled = false

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7f5qq"]
size = Vector2(12, 12)

[sub_resource type="CircleShape2D" id="CircleShape2D_uckkw"]
radius = 14.0001

[node name="tome" type="RigidBody2D" groups=["collectable", "tomes"]]
z_index = 4
collision_layer = 2
collision_mask = 16
input_pickable = true
can_sleep = false
lock_rotation = true
script = ExtResource("1_kdg2i")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_xkvu8")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_prgk6")
texture = ExtResource("1_swse0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_7f5qq")

[node name="DetectPlayer" type="Area2D" parent="."]
visible = false
collision_mask = 2

[node name="PickupShape" type="CollisionShape2D" parent="DetectPlayer"]
shape = SubResource("CircleShape2D_uckkw")

[node name="SpellLabel" type="Label" parent="."]
z_index = 10
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -31.0
offset_top = -15.0
offset_right = 31.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("4_7dujs")
theme_override_font_sizes/font_size = 8
text = "spell"
horizontal_alignment = 1

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="body_entered" from="DetectPlayer" to="." method="_on_detect_player_body_entered"]
[connection signal="body_exited" from="DetectPlayer" to="." method="_on_detect_player_body_exited"]
